feat: Working vehicle controller
Needed to add expressApp.use(express.json()); in addition
to expressApp.use(express.urlencoded({ extended: true });

That was giving me a lot of trouble for a little while.
