# build/public/swagger.json
@@ -207,19 +207,8 @@
 				],
 				"type": "string"
 			},
-			"Pick_IVehicle.Exclude_keyofIVehicle.id-and-createdAt-and-updatedAt__": {
+			"Pick_IVehicle.Exclude_keyofIVehicle.id-or-createdAt-or-updatedAt__": {
 				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					},
 					"registration": {
 						"$ref": "#/components/schemas/IRegistrationDetails"
 					},
@@ -246,9 +235,6 @@
 					}
 				},
 				"required": [
-					"id",
-					"createdAt",
-					"updatedAt",
 					"registration",
 					"vinNumber",
 					"ownerReportedCarValue",
@@ -258,8 +244,8 @@
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_IVehicle.id-and-createdAt-and-updatedAt_": {
-				"$ref": "#/components/schemas/Pick_IVehicle.Exclude_keyofIVehicle.id-and-createdAt-and-updatedAt__",
+			"Omit_IVehicle.id-or-createdAt-or-updatedAt_": {
+				"$ref": "#/components/schemas/Pick_IVehicle.Exclude_keyofIVehicle.id-or-createdAt-or-updatedAt__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			}
 		},
@@ -288,7 +274,7 @@
 				"operationId": "GetMany",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -453,7 +439,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_IVehicle.id-and-createdAt-and-updatedAt_"
+								"$ref": "#/components/schemas/Omit_IVehicle.id-or-createdAt-or-updatedAt_"
 							}
 						}
 					}
@@ -465,7 +451,7 @@
 				"operationId": "GetOne",
 				"responses": {
 					"200": {
-						"description": "Ok",
+						"description": "",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -516,6 +502,42 @@
 						"schema": {
 							"format": "double",
 							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/v1/vehicles/{clientId}": {
+			"get": {
+				"operationId": "GetById",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/IVehicle"
+										},
+										{}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vehicle"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "clientId",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
